[gd_scene load_steps=11 format=3 uid="uid://cf3ax1fquw2mm"]

[ext_resource type="Script" uid="uid://bbbg3nsy3r07y" path="res://Scripts/UI/settings_panel.gd" id="1_dtvsw"]
[ext_resource type="Theme" uid="uid://cpqqj8uayl3pq" path="res://Themes/Label.tres" id="1_n0hrt"]
[ext_resource type="Texture2D" uid="uid://derrdt27xagod" path="res://Assets/UI/panel-border-007.png" id="2_dtvsw"]
[ext_resource type="Texture2D" uid="uid://ccbcslnsifj3o" path="res://Assets/UI/divider-fade-002.png" id="3_5r3fy"]
[ext_resource type="Theme" uid="uid://od14ccps1daj" path="res://Themes/descriptive_label.tres" id="4_24wwl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tdl33"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r3so4"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5s6gc"]
texture = ExtResource("2_dtvsw")
texture_margin_left = 32.0
texture_margin_top = 32.0
texture_margin_right = 32.0
texture_margin_bottom = 32.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eerkr"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rcebd"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1

[node name="SettingsPanel" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dtvsw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.705882)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -117.5
offset_top = -117.5
offset_right = 117.5
offset_bottom = 117.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_tdl33")

[node name="pnlBlackBack" type="PanelContainer" parent="Panel"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -249.5
offset_top = -333.5
offset_right = 362.5
offset_bottom = 333.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r3so4")

[node name="pnlBorder" type="PanelContainer" parent="Panel/pnlBlackBack"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
theme = ExtResource("1_n0hrt")
theme_override_styles/panel = SubResource("StyleBoxTexture_5s6gc")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/pnlBlackBack/pnlBorder"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="menuTitle" type="HBoxContainer" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer"]
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/menuTitle"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_5r3fy")
expand_mode = 1
stretch_mode = 5

[node name="lblTitle" type="Label" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/menuTitle"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/menuTitle"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_5r3fy")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="MarginContainer3" type="MarginContainer" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="panelAudio" type="PanelContainer" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_eerkr")

[node name="MarginContainer" type="MarginContainer" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/panelAudio"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/panelAudio/MarginContainer"]
layout_mode = 2
theme = ExtResource("4_24wwl")
theme_override_constants/separation = 5

[node name="lblAudio" type="Label" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/panelAudio/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_n0hrt")
text = "- Audio -"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MasterVolume" type="HBoxContainer" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/panelAudio/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="lblMaster" type="Label" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/panelAudio/MarginContainer/VBoxContainer/MasterVolume"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Master: 100% "
vertical_alignment = 1

[node name="sliderMaster" type="HSlider" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/panelAudio/MarginContainer/VBoxContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="SFXVolue" type="HBoxContainer" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/panelAudio/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="lblSFX" type="Label" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/panelAudio/MarginContainer/VBoxContainer/SFXVolue"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "SFX: 100% "
vertical_alignment = 1

[node name="sliderSFX" type="HSlider" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/panelAudio/MarginContainer/VBoxContainer/SFXVolue"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="MusicVolume" type="HBoxContainer" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/panelAudio/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="lblMusic" type="Label" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/panelAudio/MarginContainer/VBoxContainer/MusicVolume"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Music: 100%"
vertical_alignment = 1

[node name="sliderMusic" type="HSlider" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/panelAudio/MarginContainer/VBoxContainer/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="AmbientVolume" type="HBoxContainer" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/panelAudio/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="lblAmbient" type="Label" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/panelAudio/MarginContainer/VBoxContainer/AmbientVolume"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Ambience: 100%"
vertical_alignment = 1

[node name="sliderAmbient" type="HSlider" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/panelAudio/MarginContainer/VBoxContainer/AmbientVolume"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="MarginContainer2" type="MarginContainer" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="panelGraphics" type="PanelContainer" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rcebd")

[node name="MarginContainer" type="MarginContainer" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/panelGraphics"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/panelGraphics/MarginContainer"]
layout_mode = 2

[node name="lblGraphics" type="Label" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/panelGraphics/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "- Graphics -"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/panelGraphics/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/panelGraphics/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="checkCRT" type="CheckBox" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/panelGraphics/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_24wwl")
button_pressed = true
text = "CRT Effect"

[node name="checkShake" type="CheckBox" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/panelGraphics/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Screen Shake"

[node name="checkVSYNC" type="CheckBox" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/panelGraphics/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "V-Sycn"

[node name="checkFullscreen" type="CheckBox" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/panelGraphics/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/panelGraphics/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="checkSkipOpening" type="CheckBox" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/panelGraphics/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Skip Opening"

[node name="MarginContainer" type="MarginContainer" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="btnReset" type="Button" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 3
text = "Reset"

[node name="MarginContainer" type="MarginContainer" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="btnCancel" type="Button" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="btnApply" type="Button" parent="Panel/pnlBlackBack/pnlBorder/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Apply"
